--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -58,8 +58,8 @@
                 {{- if $comment.enable | and $comment.valine.enable | and $comment.valine.visitor -}}
                     <span id="{{ .RelPermalink }}" class="leancloud_visitors" data-flag-title="{{ .Title }}">
                         <i class="far fa-eye fa-fw" aria-hidden="true"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;{{ T "views" }}
-                    </span>&nbsp; -->
-                {{- end -}}
+                    </span>&nbsp;
+                {{- end -}} -->
             </div>
         </div>
 
