--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -2,3 +2,15 @@
 // Custom style
 // 自定义样式
 // ==============================
+.post-content img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.post-content table {
+  	/* 列宽自适应 */
+    width: fit-content; 
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
